[gd_scene load_steps=9 format=2]

[ext_resource path="res://Sprites/Items/Item_DynamiteFrancaise_FixedSprite.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Items/Item_SingleDynamite_FixedSprite.png" type="Texture" id=2]
[ext_resource path="res://Dynamite.gd" type="Script" id=3]
[ext_resource path="res://Hurtbox.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/Effects/flame.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "French",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Single",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 30.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2.5, 2.5 )

[node name="Dynamite" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Single"

[node name="Flame" type="Sprite" parent="AnimatedSprite"]
position = Vector2( 5, -3 )
texture = ExtResource( 5 )

[node name="FuseTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="ExplosionHurtbox" parent="." instance=ExtResource( 4 )]
collision_layer = 0
collision_mask = 14
hb_owner = "dynamite"

[node name="CollisionShape2D" parent="ExplosionHurtbox" index="0"]
shape = SubResource( 2 )
disabled = true

[node name="ExplosionTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 0.5 )
shape = SubResource( 3 )

[connection signal="timeout" from="FuseTimer" to="." method="_on_FuseTimer_timeout"]
[connection signal="timeout" from="ExplosionTimer" to="." method="_on_ExplosionTimer_timeout"]

[editable path="ExplosionHurtbox"]
